Fix filter z-index with child list

--- a/src/Resources/public/src/scss/gutes_default/_list_filter.scss
+++ b/src/Resources/public/src/scss/gutes_default/_list_filter.scss
@@ -198,6 +198,9 @@
 /** DEFAULT WITHOUT EXTENDED FILTER BUTTON **/
 
 .c4g-listfilter-default {
+    .container {
+      z-index: 20;
+    }
 
 //  .c4g-listfilter-inner {
     @include make-container();
